feat:新增生成人格行程功能